Added remote debugging and part of CORS settings, still returns errors on POST (GET works)